Updated project with the latest changes including test pages, system functions, and slight adjustments to the interpreter code. Changes to Java and C# coming soon.

--- a/public_html/cfg/TEST13.HTML
+++ b/public_html/cfg/TEST13.HTML
@@ -21,6 +21,10 @@
                   ],
                   "ret":{"sys":"val", "type":"bool", "v":"false"},
                   "lines":[
+                     {"sys":"call", "name":"SYS::wr", "args":[
+                        {"sys":"const", "val":{"sys":"val", "type":"string", "v":"Program "}}, 
+                        {"sys":"const", "val":{"sys":"val", "type":"string", "v":"Output"}}
+                     ]},                     
                      {"sys":"call", "name":"SYS::wrInt", "args":[
                         {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.tmp1"}}
                      ]},
