Updated project with the latest changes to support a demonstration array sorting example program in the JS project's cfg dir, test 21.

--- a/public_html/cfg/TEST20.HTML
+++ b/public_html/cfg/TEST20.HTML
@@ -258,7 +258,7 @@
           * Desc: A function to init the test page.
           */
          function init() {
-            var desc = "A test to demonstrate a simple sorting algorithm.";
+            var desc = "A test to demonstrate calling functions in different ways with function variable, argument access, as well as class variables. Demonstrates the use of all 3 function calling techniques, string, const, and ref objects.";
             var txtArea = document.getElementById('message');
          
             jsonPlState.prototype.wr = function(s) {
