Updated project with the latest changes to support a demonstration array sorting example program in the JS project's cfg dir, test 21, 2.

--- a/public_html/cfg/TEST21.HTML
+++ b/public_html/cfg/TEST21.HTML
@@ -133,6 +133,8 @@
                                        {"sys":"const", "val":{"sys":"val", "type":"string", "v":", "}},
                                        {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"$.vars.nidx"}},
                                        {"sys":"const", "val":{"sys":"val", "type":"string", "v":", "}},
+                                       {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"$.vars.len"}},                                       
+                                       {"sys":"const", "val":{"sys":"val", "type":"string", "v":", "}},
                                        {"sys":"const", "val":{"sys":"val", "type":"string", "v":"Value: "}},                              
                                        {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.[$.vars.idx]"}},
                                        {"sys":"const", "val":{"sys":"val", "type":"string", "v":", "}},
