Updated project with the latest changes to support system function malloc(mlc) and array malloc(amlc), and clean(cln) functions.

--- a/public_html/EXEC4.HTML
+++ b/public_html/EXEC4.HTML
@@ -46,8 +46,8 @@
                      "type": "int[]",
                      "len": "2",
                      "v": [
-                        {"sys":"const", "name":"0", "val":{"sys":"val", "type":"int", "v":"0"}},
-                        {"sys":"const", "name":"1", "val":{"sys":"val", "type":"int", "v":"1"}}                        
+                        {"sys":"var", "name":"0", "val":{"sys":"val", "type":"int", "v":"0"}},
+                        {"sys":"var", "name":"1", "val":{"sys":"val", "type":"int", "v":"1"}}                        
                      ]
                   }         
                },
