--- a/public_html/cfg/TEST17.HTML
+++ b/public_html/cfg/TEST17.HTML
@@ -16,8 +16,8 @@
                      "strict":"false",
                      "len":"2",
                      "v":[
-                        {"sys":"const", "name":"item0", "val":{"sys":"val", "type":"int", "v":"0"}},
-                        {"sys":"const", "name":"item1", "val":{"sys":"val", "type":"string", "v":"-1"}}                        
+                        {"sys":"var", "name":"item0", "val":{"sys":"val", "type":"int", "v":"0"}},
+                        {"sys":"var", "name":"item1", "val":{"sys":"val", "type":"string", "v":"-1"}}                        
                      ]
                   }         
                }
