--- a/public_html/cfg/TEST18.HTML
+++ b/public_html/cfg/TEST18.HTML
@@ -15,8 +15,8 @@
                      "strict":"true",
                      "len":"2",
                      "v":[
-                        {"sys":"const", "name":"item0", "val":{"sys":"val", "type":"int", "v":"-1"}},
-                        {"sys":"const", "name":"item1", "val":{"sys":"val", "type":"int", "v":"-1"}}                        
+                        {"sys":"var", "name":"item0", "val":{"sys":"val", "type":"int", "v":"-1"}},
+                        {"sys":"var", "name":"item1", "val":{"sys":"val", "type":"int", "v":"-1"}}                        
                      ]
                   }         
                }
