--- a/public_html/cfg/TEST20.HTML
+++ b/public_html/cfg/TEST20.HTML
@@ -14,11 +14,11 @@
                      "type":"int[]",
                      "len":"5",
                      "v":[
-                        {"sys":"const", "name":"item0", "val":{"sys":"val", "type":"int", "v":"-4"}},
-                        {"sys":"const", "name":"item1", "val":{"sys":"val", "type":"int", "v":"8"}},
-                        {"sys":"const", "name":"item2", "val":{"sys":"val", "type":"int", "v":"47"}},
-                        {"sys":"const", "name":"item3", "val":{"sys":"val", "type":"int", "v":"21"}},
-                        {"sys":"const", "name":"item4", "val":{"sys":"val", "type":"int", "v":"-56"}}
+                        {"sys":"var", "name":"item0", "val":{"sys":"val", "type":"int", "v":"-4"}},
+                        {"sys":"var", "name":"item1", "val":{"sys":"val", "type":"int", "v":"8"}},
+                        {"sys":"var", "name":"item2", "val":{"sys":"val", "type":"int", "v":"47"}},
+                        {"sys":"var", "name":"item3", "val":{"sys":"val", "type":"int", "v":"21"}},
+                        {"sys":"var", "name":"item4", "val":{"sys":"val", "type":"int", "v":"-56"}}
                      ]
                   }         
                },
