--- a/public_html/cfg/TEST5.HTML
+++ b/public_html/cfg/TEST5.HTML
@@ -14,8 +14,8 @@
                      "type":"int[]",
                      "len":"2",
                      "v":[
-                        {"sys":"const", "name":"item0", "val":{"sys":"val", "type":"int", "v":"0"}},
-                        {"sys":"const", "name":"item1", "val":{"sys":"val", "type":"int", "v":"1"}}                        
+                        {"sys":"var", "name":"item0", "val":{"sys":"val", "type":"int", "v":"0"}},
+                        {"sys":"var", "name":"item1", "val":{"sys":"val", "type":"int", "v":"1"}}                        
                      ]
                   }         
                }
