Updated project with the latest changes to support sync of the test programs.

--- a/public_html/cfg/TEST0.HTML
+++ b/public_html/cfg/TEST0.HTML
@@ -4,7 +4,7 @@
       <script type="text/javascript" src="../exec4.js"></script>
       <script type="text/javascript">
          var code = {
-            "sys":"class", "name":"program1",
+            "sys":"class", "name":"test0",
             "call":{"sys":"call", "name":"main", "args":[]},
             "vars":[
                {
@@ -14,8 +14,8 @@
                      "type":"int[]",
                      "len":"2",
                      "v":[
-                        {"sys":"const", "name":"item0", "val":{"sys":"val", "type":"int", "v":"0"}},
-                        {"sys":"const", "name":"item1", "val":{"sys":"val", "type":"int", "v":"1"}}                        
+                        {"sys":"var", "name":"item0", "val":{"sys":"val", "type":"int", "v":"0"}},
+                        {"sys":"var", "name":"item1", "val":{"sys":"val", "type":"int", "v":"1"}}                        
                      ]
                   }         
                }
