--- a/public_html/cfg/TEST11.HTML
+++ b/public_html/cfg/TEST11.HTML
@@ -4,7 +4,7 @@
       <script type="text/javascript" src="../exec4.js"></script>
       <script type="text/javascript">
          var code = {
-            "sys":"class", "name":"program1",
+            "sys":"class", "name":"test11",
             "call":{"sys":"call", "name":"main", "args":[]},
             "vars":[
                {"sys":"var", "name":"ptr1", "val":{"sys":"val", "type":"string", "v":"$.vars.tmp1"}}               
@@ -26,8 +26,8 @@
                }
             ],
             "ret":{"sys":"val", "type":"string", "v":"-2"}
-         };            
-         
+         };
+                  
          /**
           * Name: init
           * Desc: A function to init the test page.
