--- a/public_html/cfg/TEST15.HTML
+++ b/public_html/cfg/TEST15.HTML
@@ -4,7 +4,7 @@
       <script type="text/javascript" src="../exec4.js"></script>
       <script type="text/javascript">
          var code = {
-            "sys":"class", "name":"program1",
+            "sys":"class", "name":"test15",
             "call":{"sys":"call", "name":"main", "args":[]},
             "vars":[
                {"sys":"var", "name":"tmp0", "val":{"sys":"val", "type":"int", "v":"5"}},
