--- a/public_html/cfg/TEST19.HTML
+++ b/public_html/cfg/TEST19.HTML
@@ -4,7 +4,7 @@
       <script type="text/javascript" src="../exec4.js"></script>
       <script type="text/javascript">
          var code = {
-            "sys":"class", "name":"BubbleSort",
+            "sys":"class", "name":"test19",
             "call":{"sys":"call", "name":"main", "args":[]},
             "vars":[
                {
@@ -92,32 +92,6 @@
             "ret":{"sys":"val", "type":"string", "v":"-2"}
          };            
          
-         /*
-            {
-               "sys":"call", "name":"SYS::wr", "args":[
-                  {"sys":"const", "val":{"sys":"val", "type":"string", "v":"Index: "}},
-                  {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"$.vars.idx"}},
-                  {"sys":"const", "val":{"sys":"val", "type":"string", "v":", "}},
-                  {"sys":"const", "val":{"sys":"val", "type":"string", "v":"T: Value: "}},
-                  {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.[$.vars.idx]"}},
-                  {"sys":"const", "val":{"sys":"val", "type":"string", "v":"Small: "}},                              
-                  {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"$.vars.sml"}}                                       
-               ]
-            },
-
-            {
-               "sys":"call", "name":"SYS::wr", "args":[
-                  {"sys":"const", "val":{"sys":"val", "type":"string", "v":"Index: "}},
-                  {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"$.vars.idx"}},
-                  {"sys":"const", "val":{"sys":"val", "type":"string", "v":", "}},
-                  {"sys":"const", "val":{"sys":"val", "type":"string", "v":"F: Value: "}},
-                  {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.[$.vars.idx]"}},
-                  {"sys":"const", "val":{"sys":"val", "type":"string", "v":"Small: "}},                              
-                  {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"$.vars.sml"}}                                       
-               ]
-            }            
-         */
-
          /**
           * Name: init
           * Desc: A function to init the test page.
