--- a/public_html/cfg/TEST20.HTML
+++ b/public_html/cfg/TEST20.HTML
@@ -4,7 +4,7 @@
       <script type="text/javascript" src="../exec4.js"></script>
       <script type="text/javascript">
          var code = {
-            "sys":"class", "name":"BubbleSort",
+            "sys":"class", "name":"test20",
             "call":{"sys":"call", "name":"main", "args":[]},
             "vars":[
                {
@@ -108,7 +108,7 @@
                                  {"sys":"const", "val":{"sys":"val", "type":"string", "v":"Value: "}},                              
                                  {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.[$.vars.idx]"}}
                               ]
-                           },
+                           }
                            
                         ]
                      },
