--- a/public_html/cfg/TEST18.HTML
+++ b/public_html/cfg/TEST18.HTML
@@ -4,7 +4,7 @@
       <script type="text/javascript" src="../exec4.js"></script>
       <script type="text/javascript">
          var code = {
-            "sys":"class", "name":"program1",
+            "sys":"class", "name":"test18",
             "call":{"sys":"call", "name":"main", "args":[]},
             "vars":[
                {
