--- a/public_html/cfg/TEST24.HTML
+++ b/public_html/cfg/TEST24.HTML
@@ -13,6 +13,7 @@
                   "args":[ 
                   ],
                   "vars":[
+                     {"sys":"var", "name":"nidx", "val":{"sys":"val", "type":"int", "v":"2"}}
                   ],
                   "ret":{"sys":"val", "type":"bool", "v":"false"},
                   "lines":[
@@ -20,7 +21,7 @@
                      {
                         "sys":"call", "name":"SYS::wr", "args":[
                            {"sys":"const", "val":{"sys":"val", "type":"string", "v":"Ptr1 Before: "}},
-                           {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1->(http://localhost:8000/?type=get&ref=)"}},
+                           {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.[$.vars.nidx]->(http://localhost:8000/?type=get&ref=)"}},
                            {"sys":"const", "val":{"sys":"val", "type":"string", "v":""}}                            
                         ]
                      },
