--- a/public_html/cfg/TEST24.HTML
+++ b/public_html/cfg/TEST24.HTML
@@ -20,17 +20,21 @@
                      {
                         "sys":"call", "name":"SYS::wr", "args":[
                            {"sys":"const", "val":{"sys":"val", "type":"string", "v":"Ptr1 Before: "}},
-                           {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.[$.vars.nidx]->(http://localhost:8000/?type=get&ref=)"}},
+                           {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.[$.vars.nidx]->(http://localhost:8000/)"}},
                            {"sys":"const", "val":{"sys":"val", "type":"string", "v":""}}                            
                         ]
                      },
                      {
+                        "sys":"asgn",
+                        "left":{"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.[$.vars.nidx]->(http://localhost:8000/)"}},
+                        "op":{"sys":"op", "type":"asgn", "v":"="},
+                        "right":{"sys":"const", "val":{"sys":"val", "type":"int", "v":"200"}}
+                     },
+                     {
                         "sys":"return", "val":{"sys":"const", "val":{"sys":"val", "type":"bool", "v":"true"}}
                      }
-
                   ]
                }
-
             ],
             "ret":{"sys":"val", "type":"bool", "v":"false"}
          };            
